--- a/index.html
+++ b/index.html
@@ -53,7 +53,12 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/ball.png" class="image fit thumb"><img src="images/thumbs/ball.png" alt="" /></a>
 								<h3><strong>Rolling Ball<strong></h3>
-								<p>A small Cross-platform game made with Unity.</p>
+							    <p>A small Cross-platform game made with Unity.</p>
+								<p><br><br></p>
+								
+								<a href="https://gamesteam.carrd.co" class="button">View</a>
+								</ul>
+								
 						<!--	</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
@@ -436,7 +441,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="mailto:abdulrehmana28@skiff.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Abdulrehman Azam</li>
+						<li> Made on earth &copy; Abdulrehman Azam</li>
 					</ul>
 				</div>
 			</footer>
