--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Strata by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Abdulrehman Azam</title>
@@ -34,7 +30,7 @@
 						<p> I'm Abdulrehman, a passionate student at Khawaja Fareed University of Engineering and Information Technology,
 							 with a strong desire to become an application developer. Since 2021, I have been immersed in the world of coding, and I've developed proficiency 
 							 in various programming languages and tools. <br>
-							<br>My skills include Java, Kotlin, Android Studio, C#, Unity, HTML, Git, and GitHub. Through hands-on projects and coursework, I have gained practical experience in 
+							<br>My skills include Java, Kotlin, Android Studio, C#, Unity, HTML, CSS, JavaScript, Git, and GitHub. Through hands-on projects and coursework, I have gained practical experience in 
 							developing mobile applications, web development, and version control. I am continually exploring new technologies and staying updated 
 							with the latest trends in the software development industry.<br> 
 							<br>In addition to my dedication to coding, I have a couple of hobbies that bring me joy and inspiration. 
@@ -56,7 +52,8 @@
 							    <p>A small Cross-platform game made with Unity.</p>
 								<p><br><br></p>
 								
-								<a href="https://gamesteam.carrd.co" class="button">View</a>
+								<ul class="actions">
+									<li><a href="https://gamesteam.carrd.co/" class="button">View</a></li>
 								</ul>
 								
 						<!--	</article>
