--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 						<p> I'm Abdulrehman, a passionate student at Khawaja Fareed University of Engineering and Information Technology,
 							 with a strong desire to become an application developer. Since 2021, I have been immersed in the world of coding, and I've developed proficiency 
 							 in various programming languages and tools. <br>
-							<br>My skills include Java, Kotlin, Android Studio, C#, Unity, Linux, HTML, CSS, JavaScript, Git, and GitHub. Through hands-on projects and coursework, I have gained practical experience in 
-							developing mobile applications, web development, and version control. I am continually exploring new technologies and staying updated 
+							<br>My skills include Java, Kotlin, Android Studio, C#, Unity, Linux, Git, and GitHub. Through hands-on projects and coursework, I have gained practical experience in 
+							developing mobile applications and some games with Unity. I am continually exploring new technologies and staying updated 
 							with the latest trends in the software development industry.<br> 
 							<br>In addition to my dedication to coding, I have a couple of hobbies that bring me joy and inspiration. 
 							Playing games allows me to appreciate the creative and technical aspects of game development, 
