--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.png" alt="" /></a>
 					<h1><strong>I am Abdulrehman</strong>,<br> an IT Student & Mobile Developer <br>
-						with a passion for creating beautiful and user-friendly applications.<br/>
+						with a passion for creating beautiful<br> and user-friendly applications.<br/>
 					</h1>
 				</div>
 			</header>
@@ -30,16 +30,14 @@
 						<p> I'm Abdulrehman, a passionate student at Khawaja Fareed University of Engineering and Information Technology,
 							 with a strong desire to become an application developer. I have been immersed in the world of coding, and I've developed proficiency 
 							 in various programming languages and tools. <br>
-							<br>My skills include Java, Kotlin, Android Studio, C#, Linux, Git, and GitHub. Through hands-on projects and coursework, I have gained practical experience in 
-							developing mobile applications and some games with Unity. I am continually exploring new technologies and staying updated 
+							<br>My skills include Java, Dart, Flutter, Firebase, C#, Git, & GitHub. Through hands-on projects and coursework, <br> I have gained practical experience in 
+							developing mobile applications. I am continually exploring new technologies and staying updated 
 							with the latest trends in the software development industry.<br> 
 							<br>In addition to my dedication to coding, I have a couple of hobbies that bring me joy and inspiration. 
 							Playing games allows me to appreciate the creative and technical aspects of game development, 
 							while watching football matches fuels my love for teamwork, strategy, and competition. Furthermore, I find documentaries fascinating as they provide valuable insights 
 							into various subjects, broadening my understanding of the world.</p>
-						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
-						</ul>
+						
 					</section>
 			
 				<!-- Two -->
@@ -94,6 +92,7 @@
 							<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
 							<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
 						  </div>
+						  <br>
 						  <ul class="actions">
 							<li><input type="submit" value="Send Message" /></li>
 						  </ul>
